# Deepseek-OCR-Test

./: DeepSeek.ipynb  patch_model.py  patch_model_final.py  pyproject.toml  run_ocr.py  run_ocr_cpu_simple.py
notebooks/: 1.ipynb
